--- a/QlyBaiGuiXe/QlyBaiGuiXe.csproj
+++ b/QlyBaiGuiXe/QlyBaiGuiXe.csproj
@@ -69,28 +69,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GUI\fDangNhap.cs">
+    <Compile Include="GUI\BaiXe\fBTTTve.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\fDangNhap.Designer.cs">
+    <Compile Include="GUI\BaiXe\fBTTTve.Designer.cs">
+      <DependentUpon>fBTTTve.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\DangNhap\fDangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DangNhap\fDangNhap.Designer.cs">
       <DependentUpon>fDangNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\fQuenMK_1.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\fQuenMK_1.Designer.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_1.Designer.cs">
       <DependentUpon>fQuenMK_1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\fQuenMK_2.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\fQuenMK_2.Designer.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_2.Designer.cs">
       <DependentUpon>fQuenMK_2.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\fQuenMK_3.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\fQuenMK_3.Designer.cs">
+    <Compile Include="GUI\DangNhap\fQuenMK_3.Designer.cs">
       <DependentUpon>fQuenMK_3.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\mainUI.cs">
@@ -99,10 +105,10 @@
     <Compile Include="GUI\mainUI.Designer.cs">
       <DependentUpon>mainUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\ucBaiXe.cs">
+    <Compile Include="GUI\BaiXe\ucBaiXe.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="GUI\ucBaiXe.Designer.cs">
+    <Compile Include="GUI\BaiXe\ucBaiXe.Designer.cs">
       <DependentUpon>ucBaiXe.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\ucTaiKhoan.cs">
@@ -125,24 +131,33 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting\blurForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Setting\blurForm.Designer.cs">
+      <DependentUpon>blurForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setting\BoForm.cs" />
     <Compile Include="Setting\TitleBar.cs" />
-    <EmbeddedResource Include="GUI\fDangNhap.resx">
+    <EmbeddedResource Include="GUI\BaiXe\fBTTTve.resx">
+      <DependentUpon>fBTTTve.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DangNhap\fDangNhap.resx">
       <DependentUpon>fDangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\fQuenMK_1.resx">
+    <EmbeddedResource Include="GUI\DangNhap\fQuenMK_1.resx">
       <DependentUpon>fQuenMK_1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\fQuenMK_2.resx">
+    <EmbeddedResource Include="GUI\DangNhap\fQuenMK_2.resx">
       <DependentUpon>fQuenMK_2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\fQuenMK_3.resx">
+    <EmbeddedResource Include="GUI\DangNhap\fQuenMK_3.resx">
       <DependentUpon>fQuenMK_3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\mainUI.resx">
       <DependentUpon>mainUI.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\ucBaiXe.resx">
+    <EmbeddedResource Include="GUI\BaiXe\ucBaiXe.resx">
       <DependentUpon>ucBaiXe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ucTaiKhoan.resx">
@@ -164,6 +179,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Setting\blurForm.resx">
+      <DependentUpon>blurForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
