--- a/QlyBaiGuiXe/QlyBaiGuiXe.csproj
+++ b/QlyBaiGuiXe/QlyBaiGuiXe.csproj
@@ -276,6 +276,7 @@
       <DependentUpon>ucVeXe.cs</DependentUpon>
     </Compile>
     <Compile Include="MoHinhDuLieu\BaiXe.cs" />
+    <Compile Include="MoHinhDuLieu\BaiXeDBContext.cs" />
     <Compile Include="MoHinhDuLieu\BangGia.cs" />
     <Compile Include="MoHinhDuLieu\ChucVu.cs" />
     <Compile Include="MoHinhDuLieu\GiaQuaDem.cs" />
@@ -285,7 +286,6 @@
     <Compile Include="MoHinhDuLieu\LoaiXe.cs" />
     <Compile Include="MoHinhDuLieu\NhanVien.cs" />
     <Compile Include="MoHinhDuLieu\TaiKhoan.cs" />
-    <Compile Include="MoHinhDuLieu\testBaiXeContext.cs" />
     <Compile Include="MoHinhDuLieu\VeLuot.cs" />
     <Compile Include="MoHinhDuLieu\VeThang.cs" />
     <Compile Include="MoHinhDuLieu\Xe.cs" />
